# rust-mailbox

./: Cargo.toml  README.md
docs/: rfc1036.txt
examples/: count.rs  read.rs  status.rs  stream.rs
src/: iter.rs  lib.rs
src/header/: bcc.rs  cc.rs  content_length.rs  content_transfer_encoding.rs  content_type.rs  date.rs  delivered_to.rs  from.rs  lines.rs  message_id.rs  mod.rs  references.rs  reply_to.rs  return_path.rs  sender.rs  status.rs  subject.rs  to.rs  user_agent.rs  x_envelope_from.rs  x_remote_addr.rs
src/mail/: address.rs  body.rs  date.rs  header.rs  headers.rs  iter.rs  mail.rs  mod.rs  status.rs
src/stream/: entry.rs  iter.rs  lines.rs  mod.rs
src/stream/entry/: begin.rs  header.rs  mod.rs
src/util/: address.rs  mod.rs  parser.rs
