[package]
name    = "mailbox"
version = "0.2.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "MBOX reader."
repository  = "https://github.com/meh/rust-mailbox"
keywords    = ["mail", "mbox"]

edition = "2021"

[dependencies]
bitflags   = "1.3"
owning_ref = "0.4"
fnv        = "1"

nom    = "7"
casing = "0.1"
chrono = "0.4"
mime   = "0.3"
